syntax = "proto3";

package cliente;

option java_multiple_files = true;
option java_package = "ec.universidad.grpc";
option java_outer_classname = "ClienteProto";

// Servicio gRPC para gesti√≥n de clientes
service ClienteService {
  rpc CrearCliente(CrearClienteRequest) returns (ClienteResponse);
  rpc ObtenerTodosClientes(Empty) returns (ClientesResponse);
  rpc ObtenerClientePorId(IdRequest) returns (ClienteResponse);
  rpc ObtenerClientePorCedula(CedulaRequest) returns (ClienteResponse);
  rpc ActualizarCliente(ActualizarClienteRequest) returns (ClienteResponse);
  rpc EliminarCliente(IdRequest) returns (DeleteResponse);
  rpc Ping(Empty) returns (PingResponse);
}

// Mensajes
message Empty {}

message IdRequest {
  int32 id = 1;
}

message CedulaRequest {
  string cedula = 1;
}

message CrearClienteRequest {
  string cedula = 1;
  string nombre = 2;
  string telefono = 3;
  string email = 4;
  string direccion = 5;
}

message ActualizarClienteRequest {
  int32 id_cliente = 1;
  string cedula = 2;
  string nombre = 3;
  string telefono = 4;
  string email = 5;
  string direccion = 6;
}

message ClienteResponse {
  int32 id_cliente = 1;
  string cedula = 2;
  string nombre = 3;
  string telefono = 4;
  string email = 5;
  string direccion = 6;
  string fecha_registro = 7;
}

message ClientesResponse {
  repeated ClienteResponse clientes = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message PingResponse {
  string message = 1;
}
